Fix bug that made scrollbars appear when hovering over map

--- a/common/styles/base/layout.styl
+++ b/common/styles/base/layout.styl
@@ -61,5 +61,6 @@ $btn
 	width 90%
 	max-width 60rem
 	margin 0 auto
+	overflow hidden
 	> *
 		margin-bottom 4em
